--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Easybank landing page</title>
   </head>
   <body>
