--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-online.svg" />
+              <img src="images/icon-online.svg" />
             </div>
             <div class="feature__title">Online Banking</div>
             <div class="feature__description">
@@ -94,7 +94,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-budgeting.svg" />
+              <img src="images/icon-budgeting.svg" />
             </div>
             <div class="feature__title">Simple Budgeting</div>
             <div class="feature__description">
@@ -105,7 +105,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-onboarding.svg" />
+              <img src="images/icon-onboarding.svg" />
             </div>
             <div class="feature__title">Fast Onboarding</div>
             <div class="feature__description">
@@ -115,7 +115,7 @@
           </div>
 
           <div class="feature__item">
-            <div class="feature__icon"><img src="../images/icon-api.svg" /></div>
+            <div class="feature__icon"><img src="images/icon-api.svg" /></div>
             <div class="feature__title">Open API</div>
             <div class="feature__description">
               Manage your savings, investments, pension, and much more from one
@@ -193,7 +193,7 @@
     <footer class="footer">
       <div class="container">
         <a href="#" class="footer__logo">
-          <img src="../images/logo-dark.svg" alt="" />
+          <img src="images/logo-dark.svg" alt="" />
         </a>
 
         <div class="footer__social">
